[package]
name = "zep"
version = "0.1.1"
edition = "2024"
authors = ["dragonpeti53 dragonpeti53@gmail.com"]
description = "A minimal, super simple, async HTTP library in Rust"
license = "MIT"
repository = "https://github.com/dragonpeti53/zep"
keywords = ["http", "server", "tokio", "async"]
categories = ["network-programming", "asynchronous"]
readme = "readme.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
