[package]
name = "zep"
version = "0.3.0"
edition = "2024"
authors = ["dragonpeti53 dragonpeti53@gmail.com"]
description = "A minimal, super simple, async HTTP library in Rust"
license = "MIT"
repository = "https://github.com/dragonpeti53/zep"
keywords = ["http", "server", "async", "api"]
categories = ["network-programming", "asynchronous", "web-programming"]
readme = "readme.md"

[dependencies]
bytes = "1.11.0"
memchr = "2.7.6"
tokio = { version = "1", features = ["full"] }
